# Shingles

./: .gitignore  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  GeneratorConfig.hpp  Gram.cpp  Gram.hpp  Parser.cpp  Parser.hpp  README.md  Word.cpp  Word.hpp  main.cpp
utils/: color.cpp  color.hpp  split.hpp
